--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,16 +23,16 @@ jobs:
 
       - name: Semgrep scan
         id: semgrep
-        continue-on-error: true  # Важно! Не падать при нахождении уязвимостей
+        continue-on-error: true
         run: |
           pip install semgrep --quiet
           
-          # Запускаем semgrep и сохраняем результаты
+          # Запускаем semgrep с разрешенными метриками или конкретным конфигом
           semgrep scan \
-            --config=auto \
+            --config="p/security-audit" \
             --json \
             --output=semgrep-results.json \
-            --metrics=off \
+            --metrics=auto \
             --disable-version-check \
             . || true
           
@@ -46,7 +46,6 @@ jobs:
             echo "error_findings=$ERROR" >> $GITHUB_OUTPUT
             echo "warning_findings=$WARNING" >> $GITHUB_OUTPUT
             
-            # Выводим сводку
             echo "=== Semgrep Results Summary ==="
             echo "Total findings: $TOTAL"
             echo "ERROR severity: $ERROR"
@@ -71,10 +70,12 @@ jobs:
           if [ ! -f "package.json" ]; then
             echo "vulnerability_count=0" >> $GITHUB_OUTPUT
             echo "high_vulnerabilities=0" >> $GITHUB_OUTPUT
+            echo "critical_vulnerabilities=0" >> $GITHUB_OUTPUT
             echo "✅ No package.json found"
             exit 0
           fi
           
+          # Запускаем npm audit
           npm audit --audit-level=high --omit=dev --json > npm-audit-results.json 2>&1 || true
           
           if [ -f "npm-audit-results.json" ]; then
@@ -89,6 +90,13 @@ jobs:
             echo "=== npm audit Results ==="
             echo "Total vulnerabilities: $TOTAL"
             echo "High: $HIGH, Critical: $CRITICAL"
+            
+            # Выводим детали если есть уязвимости
+            if [ "$TOTAL" -gt 0 ]; then
+              echo ""
+              echo "=== Affected packages ==="
+              jq -r '.vulnerabilities[]? | "  - \(.name)@\(.range): \(.severity) - \(.title)"' npm-audit-results.json 2>/dev/null | head -5
+            fi
           else
             echo "vulnerability_count=0" >> $GITHUB_OUTPUT
             echo "high_vulnerabilities=0" >> $GITHUB_OUTPUT
@@ -101,9 +109,26 @@ jobs:
         run: |
           pip install bandit --quiet
           
-          # Ищем Python файлы для сканирования
-          find . -type f -name "*.py" ! -path "./.*" ! -path "*/node_modules/*" ! -path "*/venv/*" | \
-            xargs bandit -f json -o bandit-results.json -ll --exit-zero 2>/dev/null || true
+          # Проверяем есть ли Python файлы
+          PY_FILES=$(find . -type f -name "*.py" ! -path "./.*" ! -path "*/node_modules/*" ! -path "*/venv/*" 2>/dev/null | head -50)
+          
+          if [ -z "$PY_FILES" ]; then
+            echo "ℹ️ No Python files found to scan"
+            echo "total_findings=0" >> $GITHUB_OUTPUT
+            echo "high_findings=0" >> $GITHUB_OUTPUT
+            echo "medium_findings=0" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          
+          echo "Found $(echo "$PY_FILES" | wc -l) Python files to scan"
+          
+          # Запускаем bandit
+          echo "$PY_FILES" | xargs bandit \
+            -f json \
+            -o bandit-results.json \
+            -ll \
+            --exit-zero \
+            2>/dev/null || true
           
           if [ -f "bandit-results.json" ]; then
             TOTAL=$(jq '.results | length' bandit-results.json 2>/dev/null || echo "0")
@@ -117,6 +142,13 @@ jobs:
             echo "=== Bandit Results ==="
             echo "Total findings: $TOTAL"
             echo "High: $HIGH, Medium: $MEDIUM"
+            
+            # Выводим детали если есть проблемы
+            if [ "$TOTAL" -gt 0 ]; then
+              echo ""
+              echo "=== Top findings ==="
+              jq -r '.results[0:5][] | "\(.issue_severity) - \(.test_name): \(.filename):\(.line_number)"' bandit-results.json
+            fi
           else
             echo "total_findings=0" >> $GITHUB_OUTPUT
             echo "high_findings=0" >> $GITHUB_OUTPUT
@@ -129,43 +161,75 @@ jobs:
         run: |
           echo "# 📊 Security Scan Report" > security-report.md
           echo "" >> security-report.md
+          echo "**Scan date:** $(date)" >> security-report.md
+          echo "" >> security-report.md
           
           # Semgrep
           SEMGREP_TOTAL=${{ steps.semgrep.outputs.total_findings || '0' }}
           SEMGREP_ERROR=${{ steps.semgrep.outputs.error_findings || '0' }}
+          SEMGREP_WARNING=${{ steps.semgrep.outputs.warning_findings || '0' }}
           
-          echo "## 🔍 Semgrep" >> security-report.md
+          echo "## 🔍 Semgrep (Code Security)" >> security-report.md
           echo "- **Total findings:** $SEMGREP_TOTAL" >> security-report.md
           echo "- **Critical (ERROR):** $SEMGREP_ERROR" >> security-report.md
+          echo "- **Warnings:** $SEMGREP_WARNING" >> security-report.md
+          
+          if [ "$SEMGREP_TOTAL" -gt 0 ]; then
+            echo "" >> security-report.md
+            echo "### Top issues:" >> security-report.md
+            if [ -f "semgrep-results.json" ]; then
+              jq -r '.results[0:5][] | "- **\(.extra.severity)** `\(.check_id)` in `\(.path):\(.start.line)` - \(.extra.message)"' semgrep-results.json >> security-report.md 2>/dev/null || true
+            fi
+          fi
           echo "" >> security-report.md
           
           # npm audit
           NPM_TOTAL=${{ steps.npm-audit.outputs.vulnerability_count || '0' }}
           NPM_CRITICAL=${{ steps.npm-audit.outputs.critical_vulnerabilities || '0' }}
+          NPM_HIGH=${{ steps.npm-audit.outputs.high_vulnerabilities || '0' }}
           
-          echo "## 📦 npm audit (frontend-miniapp)" >> security-report.md
+          echo "## 📦 npm audit (Dependencies)" >> security-report.md
           echo "- **Total vulnerabilities:** $NPM_TOTAL" >> security-report.md
           echo "- **Critical:** $NPM_CRITICAL" >> security-report.md
+          echo "- **High:** $NPM_HIGH" >> security-report.md
           echo "" >> security-report.md
           
           # Bandit
           BANDIT_TOTAL=${{ steps.bandit.outputs.total_findings || '0' }}
           BANDIT_HIGH=${{ steps.bandit.outputs.high_findings || '0' }}
+          BANDIT_MEDIUM=${{ steps.bandit.outputs.medium_findings || '0' }}
           
-          echo "## 🐍 Bandit (Python)" >> security-report.md
+          echo "## 🐍 Bandit (Python Security)" >> security-report.md
           echo "- **Total findings:** $BANDIT_TOTAL" >> security-report.md
           echo "- **High severity:** $BANDIT_HIGH" >> security-report.md
+          echo "- **Medium severity:** $BANDIT_MEDIUM" >> security-report.md
+          
+          if [ "$BANDIT_TOTAL" -gt 0 ]; then
+            echo "" >> security-report.md
+            echo "### Top issues:" >> security-report.md
+            if [ -f "bandit-results.json" ]; then
+              jq -r '.results[0:5][] | "- **\(.issue_severity)** `\(.test_name)` in `\(.filename):\(.line_number)` - \(.issue_text)"' bandit-results.json >> security-report.md 2>/dev/null || true
+            fi
+          fi
           echo "" >> security-report.md
           
+          # Summary
           echo "## 📈 Summary" >> security-report.md
-          echo "Scan completed successfully. Review findings above." >> security-report.md
+          echo "Security scan completed. Review findings above and address critical issues." >> security-report.md
+          echo "" >> security-report.md
+          echo "> **Note:** This report is generated automatically. Some findings may be false positives." >> security-report.md
 
       - name: Upload security report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: security-report
-          path: security-report.md
+          name: security-reports
+          path: |
+            security-report.md
+            semgrep-results.json
+            bandit-results.json
+            frontend-miniapp/npm-audit-results.json
+          retention-days: 30
 
       - name: Decision gate
         id: decision
@@ -178,50 +242,78 @@ jobs:
           NPM_HIGH=${{ steps.npm-audit.outputs.high_vulnerabilities || '0' }}
           BANDIT_HIGH=${{ steps.bandit.outputs.high_findings || '0' }}
           
-          # Политика безопасности (можно настраивать)
+          echo "Metrics:"
+          echo "- Semgrep ERROR findings: $SEMGREP_ERROR"
+          echo "- npm CRITICAL vulnerabilities: $NPM_CRITICAL"
+          echo "- npm HIGH vulnerabilities: $NPM_HIGH"
+          echo "- Bandit HIGH findings: $BANDIT_HIGH"
+          echo ""
+          
+          # Политика безопасности (настраиваемая)
           FAIL=false
           REASONS=""
           
-          # Правило 1: Критические уязвимости npm блокируют
+          # Правило 1: Критические уязвимости npm блокируют мерж
           if [ "$NPM_CRITICAL" -gt 0 ]; then
             FAIL=true
-            REASONS="$REASONS Found $NPM_CRITICAL CRITICAL npm vulnerabilities; "
+            REASONS="$REASONS❌ Found $NPM_CRITICAL CRITICAL npm vulnerabilities (must be 0); "
           fi
           
-          # Правило 2: High уязвимости npm блокируют
-          if [ "$NPM_HIGH" -gt 2 ]; then  # Допускаем до 2 high
+          # Правило 2: High уязвимости npm (допускаем до 3)
+          if [ "$NPM_HIGH" -gt 3 ]; then
             FAIL=true
-            REASONS="$REASONS Found $NPM_HIGH HIGH npm vulnerabilities (limit: 2); "
+            REASONS="$REASONS❌ Found $NPM_HIGH HIGH npm vulnerabilities (max 3 allowed); "
+          elif [ "$NPM_HIGH" -gt 0 ]; then
+            echo "⚠️  Found $NPM_HIGH HIGH npm vulnerabilities (review recommended)"
           fi
           
           # Правило 3: High Bandit findings блокируют
           if [ "$BANDIT_HIGH" -gt 0 ]; then
             FAIL=true
-            REASONS="$REASONS Found $BANDIT_HIGH HIGH Bandit issues; "
+            REASONS="$REASONS❌ Found $BANDIT_HIGH HIGH Bandit security issues; "
           fi
           
-          # Правило 4: Semgrep ERROR можно настроить как warning
-          if [ "$SEMGREP_ERROR" -gt 0 ]; then
+          # Правило 4: Semgrep ERROR (допускаем до 5, так как могут быть false positives)
+          if [ "$SEMGREP_ERROR" -gt 5 ]; then
+            FAIL=true
+            REASONS="$REASONS❌ Found $SEMGREP_ERROR Semgrep ERROR findings (max 5 allowed); "
+          elif [ "$SEMGREP_ERROR" -gt 0 ]; then
             echo "⚠️  Found $SEMGREP_ERROR Semgrep ERROR findings (review recommended)"
-            # Можно не блокировать, только предупреждать
-            # FAIL=true
-            # REASONS="$REASONS Found $SEMGREP_ERROR Semgrep ERROR findings; "
           fi
           
           if [ "$FAIL" = true ]; then
             echo "all-passed=false" >> $GITHUB_OUTPUT
             echo "::error::Security gate blocked: $REASONS"
             echo "❌ Security checks failed: $REASONS"
+            echo ""
+            echo "## Next steps:"
+            echo "1. Review the security report artifact"
+            echo "2. Fix critical and high severity issues"
+            echo "3. For false positives, add exceptions to .semgrepignore or adjust rules"
             exit 1
           else
             echo "all-passed=true" >> $GITHUB_OUTPUT
-            echo "✅ All security checks passed"
+            echo "✅ Security checks passed"
+            echo ""
+            echo "## Status:"
+            if [ "$SEMGREP_ERROR" -gt 0 ] || [ "$NPM_HIGH" -gt 0 ] || [ "$BANDIT_HIGH" -gt 0 ]; then
+              echo "⚠️  Some security issues found (within allowed limits). Review recommended."
+            else
+              echo "🎉 No critical security issues found!"
+            fi
           fi
 
-      - name: Create GitHub annotations (optional)
+      - name: Create GitHub annotations for PR
         if: failure() && github.event_name == 'pull_request'
         run: |
-          # Создаем аннотации для найденных проблем
+          # Аннотации для Semgrep
           if [ -f "semgrep-results.json" ]; then
-            jq -r '.results[] | select(.extra.severity == "ERROR") | "::error file=\(.path),line=\(.start.line),col=\(.start.col)::[Semgrep] \(.extra.message)"' semgrep-results.json || true
+            echo "Creating Semgrep annotations..."
+            jq -r '.results[] | select(.extra.severity == "ERROR") | "::error file=\(.path),line=\(.start.line),col=\(.start.col)::[Semgrep ERROR] \(.extra.message) (Rule: \(.check_id))"' semgrep-results.json 2>/dev/null || true
+          fi
+          
+          # Аннотации для Bandit
+          if [ -f "bandit-results.json" ]; then
+            echo "Creating Bandit annotations..."
+            jq -r '.results[] | select(.issue_severity == "HIGH") | "::error file=\(.filename),line=\(.line_number),col=1::[Bandit HIGH] \(.issue_text) (Test: \(.test_name))"' bandit-results.json 2>/dev/null || true
           fi
